# GitHub-IP-Manager

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: hosts-manager.h  ip-tester.h
src/: hosts-manager.cpp  hosts-manager.h  ip-fetcher.cpp  ip-fetcher.h  ip-tester.cpp  ip-tester.h  main.cpp  terminal-ui.cpp  terminal-ui.h
